        Reviewed by Maciej Stachowiak.

https://bugs.webkit.org/show_bug.cgi?id=9761
        LiveConnect string conversion fails for java.lang.Object

        Can't test Java in DRT (I wonder why).

        * bridge/jni/jsc/JNIUtilityPrivate.cpp: (JSC::Bindings::convertValueToJValue):
        Added the necessary conversion. Also, removed CONVERT_NULL_TO_EMPTY_STRING dead code.



Canonical link: https://commits.webkit.org/46349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55044 268f45cc-cd09-0410-ab3c-d52691b4dbfc